# Bruma

./: index.html  package-lock.json  package.json
.cursor/rules/: styles.mdc
.github/workflows/: deploy.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  device.rs  lib.rs  main.rs  supabase.rs  vault_credentials.rs
src-tauri/src/security/: commands.rs  mod.rs
src/components/: AddNoteDialog.tsx  ChangePasswordDialog.tsx  CreateFolderDialog.tsx  DeleteFolderDialog.tsx  NoteDialog.tsx  SupabaseCredentialsForm.tsx  SystemCheckItem.tsx  UnlockVaultPage.tsx  UserInfoForm.tsx  VaultNotesPage.tsx  VaultSetupWizard.tsx
src/components/editor/: EditorToolbar.tsx
src/components/icons/: BrumaIcon.tsx
src/components/layout/: Layout.tsx  PageLayout.tsx
src/components/ui/: toggle.tsx
src/contexts/: DeviceContext.tsx  JournalContext.tsx  ReportSettingsContext.tsx  RoutineContext.tsx  SystemChecksContext.tsx  ThemeProvider.tsx  TodoContext.tsx  UserCredentialsContext.tsx  VaultContext.tsx
src/pages/: ChooseForMePage.tsx  CollectionPage.tsx  DiceRollerPage.tsx  FolderPage.tsx  ManageRoutinesPage.tsx  NotePage.tsx  PasswordGeneratorPage.tsx  RoutinePage.tsx  SettingsPage.tsx  SystemChecksPage.tsx  TodoPage.tsx  VaultPage.tsx  WelcomePage.tsx  WritePage.tsx
src/services/: encryption.ts
src/styles/: editor.css  fonts.css
src/types/: routine.ts
