[package]
name = "bruma"
version = "0.1.0"
description = "A Tauri App"
authors = ["Gabriel A. Luis Freitas <gabiluisfreitas@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bruma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
tauri-plugin-store = "2"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

